--- a/style.css
+++ b/style.css
@@ -62,6 +62,29 @@ a:hover {
     cursor: default;
 }
 
+/* .console-container {
+ 
+    font-family:Khula;
+    font-size:4em;
+    text-align:center;
+    height:200px;
+    width:600px;
+    display:block;
+    position:absolute;
+    color:black;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    margin:auto;
+  }
+  .console-underscore {
+     display:inline-block;
+    position:relative;
+    top:-0.14em;
+    left:10px;
+  } */
+
 /* HAMBURGER MENU */
 #hamburger-nav {
     display: none;
@@ -161,12 +184,14 @@ section {
     justify-content: center;
     gap: 5rem;
     height: 80vh;
+  
 }
 
 .section_pic-container {
     display: flex;
-    height: 400px;
-    width: 400px;
+    height: 600px;
+    width: 600px;
+    /* background-color: aquamarine; */
     margin: auto 0;
 }
 
