--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav, .nav-links {
     position: sticky;
     top: 0;
     z-index: 999;
-    background-color: aliceblue;
+    background-color: white;
 }
 
 nav {
@@ -66,28 +66,6 @@ a:hover {
     cursor: default;
 }
 
-/* .console-container {
- 
-    font-family:Khula;
-    font-size:4em;
-    text-align:center;
-    height:200px;
-    width:600px;
-    display:block;
-    position:absolute;
-    color:black;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    margin:auto;
-  }
-  .console-underscore {
-     display:inline-block;
-    position:relative;
-    top:-0.14em;
-    left:10px;
-  } */
 
 /* HAMBURGER MENU */
 #hamburger-nav {
