--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ nav, .nav-links {
 nav {
     justify-content: space-around;
     align-items: center;
-    height: 17vh;
+    height: fit-content;
+    padding: 20px;
 }
 
 .nav-links {
