--- a/style.css
+++ b/style.css
@@ -326,6 +326,7 @@ section {
 .experience-details-container {
     display: flex;
     justify-content: center;
+    align-items: start;
     flex-direction: column;
 }
 
